Include sqr headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project (TEST)
 add_subdirectory (src)
 add_subdirectory (test)
 
+include_directories (${TEST_SOURCE_DIR}/src)
 add_executable (demo main.cpp)
 target_link_libraries (demo Sqr)
 
