--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,5 +8,4 @@ add_executable (Test test.cpp)
 
 target_link_libraries(Test Sqr ${Boost_FILESYSTEM_LIBRARY}
   ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-  ${Boost_SYSTEM_LIBRARY}
-  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
+  ${Boost_SYSTEM_LIBRARY})
