QueryTranslate library and tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,11 @@
 cmake_minimum_required (VERSION 2.8)
 project (TEST)
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(BOOST_ROOT "/home/alexseik/app/boost_1_57_0")
+set(Boost_INCLUDE_DIR "/home/alexseik/app/boost_1_57_0")
+set(Boost_USE_STATIC_LIBS OFF)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
 
 add_subdirectory (src)
 add_subdirectory (test)
@@ -9,4 +15,5 @@ add_executable (demo main.cpp)
 target_link_libraries (demo Sqr)
 
 enable_testing()
-add_test (NAME MyTest COMMAND Test)
+add_test (NAME SqrTest COMMAND TestSqr)
+add_test (NAME QueryTranslateTest COMMAND TestQueryTranslate)
