--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ include_directories (${Boost_INCLUDE_DIRS})
 add_definitions (-DBOOST_REGEX_DYN_LINK)
 
 add_library (Sqr sqr.cpp sqr.h)
-add_library (QueryTranslate queryTranslate.cpp queryTranslate.h)
+add_library (QueryTranslate queryTranslate.cpp queryTranslate.h token.h)
 target_link_libraries(QueryTranslate ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_REGEX_LIBRARY})
 
 
