Entry point for etx2sql compiled in static and shared mode for unix and windows. Cmake files changed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,14 @@
 cmake_minimum_required (VERSION 2.8)
 project (TEST)
 
+OPTION(BUIL_SHARED_LIBS "Build Shared Libraries" OFF)
+SET (LIB_TYPE STATIC)
+IF (BUILD_SHARED_LIBS)
+	SET (LIB_TYPE SHARED)
+	ADD_DEFINITIONS(-DQueryTranslate_SHARED)
+ENDIF (BUILD_SHARED_LIBS)
+
+
 if (UNIX)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 	set(BOOST_ROOT "/home/alexseik/app/boost_1_57_0")
@@ -10,7 +18,8 @@ endif()
 if (MSVC10)
 	set(BOOST_ROOT "C:\\local\\boost_1_57_0")
 	set(Boost_INCLUDE_DIR "C:\\local\\boost_1_57_0")
-	#set(Boost_USE_STATIC_LIBS OFF)
+	set(BOOST_LIBRARYDIR "C:\\local\\boost_1_57_0\\lib64-msvc-10.0")
+	set(Boost_USE_STATIC_LIBS ON)
 	#set(Boost_USE_MULTITHREADED ON)
 	#set(Boost_USE_STATIC_RUNTIME OFF)
 endif()
